# simplefix

./: .deepsource.toml  .gitignore  .travis.yml  CONTRIBUTING.rst  LICENSE  NOTES.rst  README.md  README.rst  appveyor.yml  dev-requirements.txt  pyproject.toml  pytest.ini  setup.py
.github/workflows/: build.yml
dev/gjvc/: secdef.py
dev/issue18/: definition.txt  ice.py  ice2.txt
doc/: DOC.txt  Makefile  changes.rst  conf.py  creating.rst  encoding.rst  getting.rst  import.rst  index.rst  intro.rst  parsing.rst
requirements/: dev.txt
simplefix/: #constants.py#  .#constants.py  __init__.py  constants.py  data.py  enums.py  errors.py  message.py  parser.py
test/: all.py  conftest.py  test_constants.py  test_enums.py  test_fix.py  test_init.py  test_message.py  test_parser.py
tools/: FixRepository.xml.bz2  fix_enums.py
